@@ -19,6 +19,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #14254: IDLE now handles readline correctly across shell restarts.
+
 - Issue #17614: IDLE no longer raises exception when quickly closing a file.
 
 - Issue #6698: IDLE now opens just an editor window when configured to do so.
